# Minimech

./: CMakeLists.txt  README.md
STM8S-SDCC-SPL/conf/: stm8s_conf.h
STM8S-SDCC-SPL/inc/: stm8s.h
project_code/inc/: MM_bt_hc06.h  MM_lib.h  MM_stm8s.h  MM_t2s_xfs5152.h
project_code/src/: MM_bt_hc06.c  MM_lib.c  MM_main.c  MM_stm8s.c  MM_t2s_xfs5152.c
